@startuml





/' Objects '/

class Admin {
	+Admin(const std::string& uname, const std::string& mail, int level)
	-admin_level : int
	+getRole() : std::string {query}
}


class CreditCardProcessor {
	+processPayment(float amount) : void {query}
}


class Customer {
	+Customer(const std::string& uname, const std::string& mail, int id, std::shared_ptr<PaymentProcessor> processor)
	-customer_id : int
	-payment_processor : std::shared_ptr<PaymentProcessor>
	+getRole() : std::string {query}
}


class Order {
	+Order(std::shared_ptr<Customer> cust)
	-customer : std::shared_ptr<Customer>
	-items : std::vector<std::string>
	+addItem(const std::string& item) : void
	+processOrder() : void
}


class PayPalProcessor {
	+processPayment(float amount) : void {query}
}


abstract class PaymentProcessor {
	+{abstract} processPayment(float amount) : void {query}
}


class ShoppingCart {
	+ShoppingCart(std::shared_ptr<Customer> cust)
	+getTotal() : float {query}
	-customer : std::shared_ptr<Customer>
	-items : std::vector<std::string>
	+addItem(const std::string& item) : void
}


abstract class User {
	+User(const std::string& uname, const std::string& mail)
	#email : std::string
	+{abstract} getRole() : std::string {query}
	#username : std::string
}





/' Inheritance relationships '/

Customer <|-- Admin


PaymentProcessor <|-- CreditCardProcessor


PaymentProcessor <|-- PayPalProcessor


User <|-- Customer





/' Aggregation relationships '/

Customer *-- PaymentProcessor


Order *-- Customer


ShoppingCart *-- Customer






/' Nested objects '/



@enduml
